--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-altgraph @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/altgraph-0.17.2-py2.py3-none-any.whl
+altgraph==0.17.2
 anyio==4.0.0
 appnope==0.1.3
 argon2-cffi==23.1.0
@@ -27,7 +27,7 @@ Flask==3.0.3
 Flask-Cors==4.0.1
 fonttools==4.51.0
 fqdn==1.5.1
-future @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
+future==0.18.2
 fuzzywuzzy==0.18.0
 gunicorn==22.0.0
 h11==0.14.0
@@ -56,7 +56,7 @@ jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.9
 kiwisolver==1.4.5
-macholib @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
+macholib==1.15.2
 MarkupSafe==2.1.3
 matplotlib==3.8.4
 matplotlib-inline==0.1.6
@@ -102,7 +102,7 @@ rfc3986-validator==0.1.1
 rpds-py==0.13.1
 selenium==4.12.0
 Send2Trash==1.8.2
-six @ file:///AppleInternal/Library/BuildRoots/860631e9-c1c5-11ee-98ee-b6ef2fd8d87b/Library/Caches/com.apple.xbs/Sources/python3/six-1.15.0-py2.py3-none-any.whl
+six==1.15.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.5
