--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "server": "python3 ../app.py",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "concurrently \"npm run server\" \"npm run build\"",
+    "lint": "next lint",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "next": "14.2.5",
@@ -23,5 +24,9 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": "20.x",
+    "npm": "10.x"
   }
 }
