--- a/next_calculator/my_frontend/package.json
+++ b/next_calculator/my_frontend/package.json
@@ -7,7 +7,7 @@
     "server": "python3 ../app.py",
     "dev": "next dev",
     "build": "next build",
-    "start": "concurrently \"npm run server\" \"npm run build\"",
+    "start": "next start",
     "lint": "next lint",
     "heroku-postbuild": "npm run build"
   },
