removed frontend folder

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "magic": "concurrently \"npm run server\" \"npm run dev\"",
-    "server": "python3 ../app.py",
+    "server": "python3 app.py",
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p $PORT",
