--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my_frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000/",
   "scripts": {
     "magic": "concurrently \"npm run server\" \"npm run dev\"",
     "server": "python3 app.py",
@@ -12,6 +13,7 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
