--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "magic": "concurrently \"npm run server\" \"npm run dev\"",
-    "server": "python3 app.py",
-    "dev": "next dev",
+    "start": "concurrently \"npm run next\" \"npm run flask\"",
+    "next": "next start -p $PORT",
+    "flask": "gunicorn app:app",
     "build": "next build",
-    "start": "next start -p $PORT",
-    "lint": "next lint",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "lint": "next lint"
   },
   "dependencies": {
     "axios": "^1.7.2",
