--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "axios": "^1.7.2",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "concurrently": "^8.2.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
