--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "concurrently \"npm run next\" \"npm run flask\"",
-    "next": "next start -p $PORT",
+    "start": "cross-env PORT=3000 concurrently \"npm run next\" \"npm run flask\"",
+    "next": "cross-env PORT=$PORT next start",
     "flask": "gunicorn app:app",
     "build": "next build",
     "heroku-postbuild": "npm run build",
@@ -12,10 +12,11 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "concurrently": "^8.2.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
