--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "server": "python3 ./app.py",
     "dev": "next dev",
     "build": "next build",
-    "start": "npm run serve",
-    "serve": "next start -p $PORT",
+    "start": "next start -p $PORT",
     "lint": "next lint",
     "heroku-postbuild": "npm run build"
   },
