--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "start": "next start -p $PORT"
   },
   "dependencies": {
+    "@emotion/cache": "^11.12.0",
+    "@emotion/react": "^11.12.0",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.12.0",
+    "@mui/material": "^5.16.4",
+    "@mui/system": "^5.16.4",
     "axios": "^1.7.2",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
