--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.2.5",
     "os": "^0.1.2",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18"
   },
   "devDependencies": {
